--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,13 @@
 spring.jpa.hibernate.ddl-auto=create
 
 
-spring.datasource.url=jdbc:mysql://localhost:3306/practice
-spring.datasource.username=user
-spring.datasource.password=123
+#spring.datasource.url=jdbc:mysql://localhost:3306/practice
+#spring.datasource.username=user
+#spring.datasource.password=123
 
-#spring.datasource.url=jdbc:mysql://gt449o7sshdspo3v:vxss4zavbrsddv2l@k3xio06abqa902qt.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/dpmonetp84006fvb
-#spring.datasource.username=	gt449o7sshdspo3v
-#spring.datasource.password=vxss4zavbrsddv2l
+spring.datasource.url=jdbc:mysql://gt449o7sshdspo3v:vxss4zavbrsddv2l@k3xio06abqa902qt.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/dpmonetp84006fvb
+spring.datasource.username=	gt449o7sshdspo3v
+spring.datasource.password=vxss4zavbrsddv2l
 
 spring.data.rest.default-page-size=500
 
